package com.example.demo.validate;

//import com.example.demo.error.ErrorValidate;

public interface Validable {

  String getValidateName();

  // ErrorValidate validate(String string);

  // ErrorValidate validate(String string, int min, int max);
}
